build_errors_2.txt
==========================================
   PLACEMENTS CELL - FAST BUILD
==========================================
[1/4] Preparing deployment directory...
[2/4] Copying library dependencies...
[3/4] Compiling ALL Java classes...
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:119: error: cannot find symbol
                s.setEmail(rs.getString("user_email"));
                 ^
  symbol:   method setEmail(String)
  location: variable s of type Student
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:120: error: cannot find symbol
                s.setApprovalStatus(sStatus);
                 ^
  symbol:   method setApprovalStatus(String)
  location: variable s of type Student
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:121: error: cannot find symbol
                s.setPlacementStatus(rs.getString("placement_status"));
                 ^
  symbol:   method setPlacementStatus(String)
  location: variable s of type Student
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:122: error: cannot find symbol
                s.setPlacedCompany(rs.getString("placed_company"));
                 ^
  symbol:   method setPlacedCompany(String)
  location: variable s of type Student
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:123: error: cannot find symbol
                s.setInternship(rs.getString("internship"));
                 ^
  symbol:   method setInternship(String)
  location: variable s of type Student
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:133: error: cannot find symbol
                s.setDiplomaPercentage(rs.wasNull() ? null : diplomaVal);
                 ^
  symbol:   method setDiplomaPercentage(Double)
  location: variable s of type Student
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:157: error: cannot find symbol
                s.setPreference(rs.getString("preference"));
                 ^
  symbol:   method setPreference(String)
  location: variable s of type Student
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:213: error: method getActiveCirculars in class CircularDAO cannot be applied to given types;
        List<String[]> circularsList = circularDAO.getActiveCirculars("HOD");
                                                  ^
  required: no arguments
  found:    String
  reason: actual and formal argument lists differ in length
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:225: error: cannot find symbol
        request.setAttribute("userName", user.getFullName() != null ? user.getFullName() : "HOD");
                                             ^
  symbol:   method getFullName()
  location: variable user of type User
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:225: error: cannot find symbol
        request.setAttribute("userName", user.getFullName() != null ? user.getFullName() : "HOD");
                                                                          ^
  symbol:   method getFullName()
  location: variable user of type User
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:226: error: cannot find symbol
        request.setAttribute("userBranch", user.getBranch() != null ? user.getBranch() : "ALL");
                                               ^
  symbol:   method getBranch()
  location: variable user of type User
c:\placementcell\backend\src\main\java\com\placementcell\controller\HODDashboardServlet.java:226: error: cannot find symbol
        request.setAttribute("userBranch", user.getBranch() != null ? user.getBranch() : "ALL");
                                                                          ^
  symbol:   method getBranch()
  location: variable user of type User
c:\placementcell\backend\src\main\java\com\placementcell\controller\UploadDocumentServlet.java:73: error: cannot find symbol
                    updated = studentDAO.updateDocumentPath(student.getId(), "sslc_path", fileName);
                                        ^
  symbol:   method updateDocumentPath(Long,String,String)
  location: variable studentDAO of type StudentDAO
c:\placementcell\backend\src\main\java\com\placementcell\controller\UploadDocumentServlet.java:78: error: cannot find symbol
                    updated = studentDAO.updateDocumentPath(student.getId(), "diploma_path", fileName);
                                        ^
  symbol:   method updateDocumentPath(Long,String,String)
  location: variable studentDAO of type StudentDAO
c:\placementcell\backend\src\main\java\com\placementcell\controller\UploadDocumentServlet.java:83: error: cannot find symbol
                    updated = studentDAO.updateDocumentPath(student.getId(), "resume_path", fileName);
                                        ^
  symbol:   method updateDocumentPath(Long,String,String)
  location: variable studentDAO of type StudentDAO
15 errors
ERROR: Compilation failed 
